1、初始化脚本完成